--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,3 +1,7 @@
 <div class="top-bar">
   <h1>Expense Tracker App</h1>
 </div>
+
+<section class="total-budget-section">
+  <h2 class="green">1500</h2>
+</section>
