--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -21,3 +21,33 @@
   }
 
 }
+/*total-budget-section*/
+.total-budget-section{
+  display: flex;
+  height: 250px;
+  background: $dark;
+
+    /*Horizontally and Vertically center the text*/
+  justify-content: center;
+  align-items: center;
+
+
+  h2{
+    font-family: 'Lato';
+    font-weight: 300;
+    font-size: 58px;
+    color: white;
+
+
+
+  //classes for when we want it to be green or red
+
+    &.green {
+      color:lighten($green, 12%); //now to get a lighten and highlighted effect use lighten scss function
+    }
+
+    &.red {
+      color:lighten($red, 12%);;
+    }
+  }
+}
