--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -51,3 +51,17 @@
     }
   }
 }
+
+.add-item-section{
+  display: flex;
+    /*Horizontally and Vertically center the form*/
+    justify-content: center;
+    align-items: center;
+
+  .add-item-container{
+    width: 680px;
+
+
+  }
+
+}
