Added budget-item-list and budget-item-card component UI style to display income and expenses items  commit

--- a/src/app/budget-item-list/budget-item-card/budget-item-card.component.scss
+++ b/src/app/budget-item-list/budget-item-card/budget-item-card.component.scss
@@ -17,9 +17,12 @@
   cursor: pointer;
 
   .description{
+    display: flex;
     flex-grow: 1;
     font-size: 18px;
     margin-left: 5px;
+    //vertically center the childern elements
+    align-items: center;
 
 
   }
