--- a/src/app/budget-item-list/budget-item-card/budget-item-card.component.scss
+++ b/src/app/budget-item-list/budget-item-card/budget-item-card.component.scss
@@ -4,8 +4,46 @@
 .root{
   display: flex;
   width: 100%;
+  position: relative;
 
-}
+  //when the parent bleow is hovered apply below styles
+  &:hover{
+    .x-icon-button{
+      opacity:1 ;
+      transform: scale(1);
+
+    }
+  }
+
+  .x-icon-button{
+    position:absolute;
+    height: 34px;
+    width:34px;
+    border-radius: 50%;
+    background: $dark;
+    background-image: url('../../../assets/delete.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    right: -17px; // half of width
+    top: -17px;  // half of height
+
+    transition: opacity 0.2s ease-out, transform 0.2s ease-out;
+    transform: scale(0);
+    opacity: 0;
+
+    cursor: pointer;
+
+    &:hover{
+        transform: scale(1.2);
+
+      }
+
+  }
+
+
+  }
+
+
 
 
 .budget-item{
@@ -15,6 +53,11 @@
   padding: 10px;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.2s ease-out;
+  &:hover{
+    background-color: darken($light-grey, 2%);
+  }
+
 
   .description{
     display: flex;
@@ -32,6 +75,7 @@
     border-radius: 3px;
 
   }
+
 
 }
 
