--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -7,6 +7,7 @@
           <app-budget-item-card
             *ngIf="item.amount >= 0"
             [item]="item"
+            (xButtonClick)="onDeleteButtonClicked(item)"
             style="display: block; margin-bottom: 20%"
           ></app-budget-item-card>
         </div>
@@ -20,6 +21,7 @@
           <app-budget-item-card
             *ngIf="item.amount < 0"
             [item]="item"
+            (xButtonClick)="onDeleteButtonClicked(item)"
             style="display: block; margin-bottom: 20%"
           ></app-budget-item-card>
         </div>
