--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -8,6 +8,7 @@
             *ngIf="item.amount >= 0"
             [item]="item"
             (xButtonClick)="onDeleteButtonClicked(item)"
+            (cardClick)="onCardClicked(item)"
             style="display: block; margin-bottom: 20%"
           ></app-budget-item-card>
         </div>
@@ -21,6 +22,7 @@
           <app-budget-item-card
             *ngIf="item.amount < 0"
             [item]="item"
+            (cardClick)="onCardClicked(item)"
             (xButtonClick)="onDeleteButtonClicked(item)"
             style="display: block; margin-bottom: 20%"
           ></app-budget-item-card>
