--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,7 +3,9 @@
 </div>
 
 <section class="total-budget-section">
-  <h2 class="green">1500</h2>
+  <h2 [ngClass]="{ red: totalBudget < 0, green: totalBudget > 0 }">
+    {{ totalBudget }}
+  </h2>
 </section>
 
 <section class="add-item-section">
@@ -14,5 +16,9 @@
 </section>
 <hr style="margin-top: 0" />
 
-<app-budget-item-list [budgetItems]="budgetItems" (delete)="deleteItem($event)">
+<app-budget-item-list
+  [budgetItems]="budgetItems"
+  (delete)="deleteItem($event)"
+  (update)="updateItem($event)"
+>
 </app-budget-item-list>
